# EGSP

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
demo/: run_egsp_end2end.py  run_egsp_infer.py  run_egsp_train.py
demo/EGSP_End2End_demo/: clinical.csv  gene_counts.csv
demo/EGSP_demo/: embeddings.csv  gene_exp_raw.npy
src/egsp/: models.py  scfoundation_bridge.py
src/egsp/pipelines/: egsp_end2end.py  egsp_infer.py  egsp_train.py
