[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "egsp"
version = "0.1.0"
description = "EGSP: Embedding–Gene–Survival Prediction model"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "scikit-learn",
    "transformers",
    "datasets",
    "scikit-survival"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
